# streamtasks

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  TODO  format.sh  main.ts  mypy.ini  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: buildapps.yml  jekyll-gh-pages.yml  release.yml  test.yml
docs/: .gitignore  _config.yml  _readme.md  architecture.d2  architecture.md  architecture.svg~  calculator.md  client.md  connection.md  custom-task.md  env.md  getting-started.md  index.md  io-metadata.md  overview.md
docs/media/: index.md
docs/network/: client.md  connection.d2  index.md  switch.d2
docs/recipes/: index.md  live-streaming.md
docs/tasks/: calculator.md  gate.md  index.md  namedinput.md  namedoutput.md  numbertotext.md  pulsegenerator.md  repeater.md  replaybuffer.md  srlatch.md  stringmatcher.md  textformatter.md
examples/: basic.py  broker.py  fn_task.py  fntask.py  gui.py  peer.py  profiler.py  server.py
examples/media/: av-container.py
examples/system/: full.py.old
examples/two-node-setup/: supervisord.conf
extra/: buildexe.py  colors.html  debugging.py  docwriter.py  makedocs.py  typer.py
extra/streamtasksui/: .gitignore  CHANGELOG  LICENSE  README.rst  pyproject-template.toml  pyproject.toml  requirements.txt
playground/: dict.py
playground/asgi/: main.py  profile.prof
playground/av/: audio-transcode.py  container-decode.py  main.ipynb  main2..ipynb  transcode-test.py  transcode.py  video-transcode.py
playground/debug/: flow_detector.py
playground/recv/: main.py
playground/serialize/: main.ipynb  message-serialize.py
playground/simple-api/: typetree.py  worker-generator.py
playground/system/: full.py  ser.py
playground/testing/: seq.py
scripts/: build-docs.sh  build-exe.sh  run-rtmp-server.sh  run-tests.sh  setup.sh
streamtasks/: __init__.py  __main__.py  asgi.py  asgiserver.py  bin.py  client.py  comm.py  communication.py  connection.py  env.py  error.py  helpers.py  messages.py  node.py  protocols.py  pydanticdb.py  rawdatabuffer.py  types.py  utils.py  worker.py
streamtasks/client/: __init__.py  (+8 more)
tests/: __init__.py  shared.py  sim.py  switch.py  test_asgi.py  test_audio_codec.py  test_client.py  test_codec.py  test_helpers.py  test_message.py  test_switch.py  test_tasks.py  test_utils.py  test_video_codec.py  test_workers.py
web/: esbuild.mjs  gulpfile.ts  package.json  pnpm-lock.yaml  tsconfig.json
web-packages/: tsconfig.base.json
(+406 files in other folders)
