[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "pybind11"]

[project]
authors = [
  {name = "leopf"},
]
dependencies = [
  "lark>=1.1.9,<2.0.0",
  "msgpack>=1.0.0,<2.0.0",
  "typing_extensions>=4.11.0,<5.0.0",
  "pydantic>=2.7.1,<3.0.0",
  "numpy>=1.26.4,<2.0.0",
]
description = "A python task orchestrator to simplify real-time, static data pipelines."
license = {text = "MIT"}
name = "streamtasks"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "ruff",
]
media = [
  "av>=12.0.0,<13.0.0",
  "opencv_python>=4.9.0.80,<5.0.0",
  "PyAudio>=0.2.14,<1.0.0",
]
testing = [
  "fastapi>=0.111.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pandas>=2.2.2,<3.0.0",
  "scipy>=1.13.0,<2.0.0",
]
web = [
  "uvicorn>=0.29.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["streamtasks*"]
